# Airobas

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
airobas/: typing.py  verif_pipeline.py
airobas/blocks_hub/: adv_block.py  decomon_block.py  gml_mip_block.py  marabou_block.py  meta_block.py
airobas/blocks_hub/adversarial/: fgsm.py  pgd.py
airobas/blocks_hub/mip_blocks_lib/commons/: formula.py  layers.py  linearfunctions.py  neural_network.py  parameters.py
airobas/blocks_hub/mip_blocks_lib/commons/bounds_propagation/: bounds_computation_decomon.py  bounds_computation_interface.py  bounds_computation_milp.py  bounds_computation_symbolic_arithmetic.py  bounds_computation_utils.py  bounds_function_linear.py  bounds_function_relu.py  bounds_function_relu_numba.py  linear_propagation.py  linear_propagation_numba.py
airobas/blocks_hub/mip_blocks_lib/commons/utilities/: evaluate.py
airobas/blocks_hub/mip_blocks_lib/linear/verification_formula/: verification_constraints.py
blocks_hub/: adv_block.py  decomon_block.py  gml_mip_block.py  marabou_block.py  meta_block.py
blocks_hub/mip_blocks_lib/: __init__.py
blocks_hub/mip_blocks_lib/commons/: formula.py  layers.py  neural_network.py  parameters.py
blocks_hub/mip_blocks_lib/commons/bounds_propagation/: bounds_computation_decomon.py  bounds_computation_interface.py  bounds_computation_symbolic_arithmetic.py  bounds_computation_utils.py  bounds_function_linear.py  bounds_function_relu.py  bounds_function_relu_numba.py  linear_propagation.py  linear_propagation_numba.py
blocks_hub/mip_blocks_lib/commons/utilities/: evaluate.py
blocks_hub/mip_blocks_lib/linear/verification_formula/: verification_constraints.py
csv_exporter/: global_output_to_csv.py
tests/: test_imports.py  test_rosenbrock.py
tutorials/: braking_distance_estimation_verification.ipynb  rosenbrock_verification.ipynb  rosenbrock_verification.py
tutorials/safety_braking_distance_estimation/: README.md
