[build-system]
requires = ["setuptools>=64", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[project]
name = "airobas"
description = "AI ROBustness ASsessment"
readme = "README.md"
authors = [
    {email ="melanie.ducoffe@airbus.com"},
]
requires-python = ">=3.9"
dependencies =[
    "keras>=3",
    "cleverhans",
    "decomon@git+https://github.com/airbus/decomon@keras3",
    "gurobi-machinelearning",
    "maraboupy",
    "onnx",
    "numba",
    "numpy <=1.26",
]
license = {text = "MIT"}
dynamic = ["version"]

[project.urls]
documentation = "https://airbus.github.io/Airobas"
repository = "https://github.com/airbus/Airobas"

[project.optional-dependencies]
dev = ["tox>=4.6.4"]


[tool.setuptools.packages.find]
where = ["."]
include = ["airobas*"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | tests/.*/setup.py
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

ignore_missing_imports = true
